--- a/index.mjml
+++ b/index.mjml
@@ -26,7 +26,7 @@
         <!-- EMAIL TITLE -->
         <mj-section background-color="white" padding="20px 0">
             <mj-column width="90%">
-                <mj-text align="center" padding="0 10px" font-size="28px" line-height="40px" font-weight="600">
+                <mj-text align="center" padding="0 10px" font-size="28px" line-height="36px" font-weight="600">
                     TURN EVERYDAY MEALS INTO GOURMET FEASTS ✨
                 </mj-text>
 
@@ -47,7 +47,7 @@
         <mj-section background-color="white" padding="20px 20px" padding-bottom="45px">
             <mj-column width="90%">
 
-                <mj-text font-size="28px" align="center" font-weight="600">
+                <mj-text font-size="28px" align="center" line-height="36px" font-weight="600">
                     A GOURMET TOUCH TO YOUR DISHES
                 </mj-text>
 
